Сверстаны главный экран и спецпредложения

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,39 @@
         </div>
       </div>
     </header>
+    <section class="main">
+      <div class="container">
+        <div class="main_right">
+          <div class="price"> 
+            <p>$145,99</p>
+          </div>
+          <h1>Розовые туфли Коллекция 2017</h1>
+          <h2>Nunc non fermentum nunc. Sed ut ante eget leo tempor consequat sit amet eu orci. Donec dignissim dolor eget..</h2>
+          <ul class="buttons">
+            <li><a href="#"><i class="fa fa-eye" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-star-o" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+            <li><a class="active" href="#"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="special">
+      <div class="container">
+        <div class="spec_divs"><a href="#">
+            <p>Распродажа</p></a><a href="#">
+            <p>Специальные предложения</p></a><a href="#">
+            <p>Must have</p></a></div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="upper_footer">
+        <div class="container"></div>
+      </div>
+      <div class="lower_footer">
+        <div class="container"></div>
+      </div>
+    </footer>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
     <script src="js/scripts.js"></script>
