--- a/app/index.html
+++ b/app/index.html
@@ -72,10 +72,33 @@
     </section>
     <footer class="footer">
       <div class="upper_footer">
-        <div class="container"></div>
+        <div class="container">
+          <div class="left">
+            <form class="subscribe" action="#" method="POST">
+              <input type="text" placeholder="Подписаться на новости"/>
+              <input type="image" src="img/Arrow_icon.png"/>
+            </form>
+          </div>
+          <div class="right"><a class="soc_buttons" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a class="soc_buttons" href="#"><i class="fa fa-vk" aria-hidden="true"></i></a><a class="soc_buttons" href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a><a class="soc_buttons" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a><a class="soc_buttons" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
+        </div>
       </div>
       <div class="lower_footer">
-        <div class="container"></div>
+        <div class="container">
+          <div class="left">
+            <p>Все права защищены &copy; Fooseshoes 2017</p>
+          </div>
+          <div class="right">
+            <nav class="footer_menu">
+              <ul>
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Поддержка</a></li>
+                <li><a href="#">Политика</a></li>
+                <li><a href="#">Faq</a></li>
+                <li><a href="#">Контакты</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </div>
     </footer>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
