--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,86 @@
             <p>Must have</p></a></div>
       </div>
     </section>
+    <section class="store">
+      <div class="container">
+        <h3>Наши новинки</h3>
+        <div class="row">
+          <div class="col3"><a href="#"><img src="img/shoes_1.jpg" alt="Товар 1"/>
+              <div class="price"> 
+                <p>$149.99</p>
+              </div></a>
+            <div class="store_row">
+              <h4 class="good_name">Buffalo Decolette</h4><a href="#"><i class="fa fa-eye"></i></a><a href="#"><i class="fa fa-star-o"></i></a><a href="#"><i class="fa fa-external-link"></i></a><a href="#"><i class="fa fa-shopping-cart"></i></a>
+            </div>
+          </div>
+          <div class="col3"><a href="#"><img src="img/shoes_2.jpg" alt="Товар 2"/>
+              <div class="price"> 
+                <p>$149.99</p>
+              </div></a>
+            <div class="store_row">
+              <h4 class="good_name">Buffalo Decolette</h4><a href="#"><i class="fa fa-eye"></i></a><a href="#"><i class="fa fa-star-o"></i></a><a href="#"><i class="fa fa-external-link"></i></a><a href="#"><i class="fa fa-shopping-cart"></i></a>
+            </div>
+          </div>
+          <div class="col3"><a href="#"><img src="img/shoes_3.jpg" alt="Товар 3"/>
+              <div class="price"> 
+                <p>$149.99</p>
+              </div></a>
+            <div class="store_row">
+              <h4 class="good_name">Buffalo Decolette</h4><a href="#"><i class="fa fa-eye"></i></a><a href="#"><i class="fa fa-star-o"></i></a><a href="#"><i class="fa fa-external-link"></i></a><a href="#"><i class="fa fa-shopping-cart"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col3"><a href="#"><img src="img/shoes_4.jpg" alt="Товар 4"/>
+              <div class="price"> 
+                <p>$149.99</p>
+              </div></a>
+            <div class="store_row">
+              <h4 class="good_name">Even&Odd</h4><a href="#"><i class="fa fa-eye"></i></a><a href="#"><i class="fa fa-star-o"></i></a><a href="#"><i class="fa fa-external-link"></i></a><a href="#"><i class="fa fa-shopping-cart"></i></a>
+            </div>
+          </div>
+          <div class="col3"><a href="#"><img src="img/shoes_5.jpg" alt="Товар 5"/>
+              <div class="price"> 
+                <p>$149.99</p>
+              </div></a>
+            <div class="store_row">
+              <h4 class="good_name">Even&Odd</h4><a href="#"><i class="fa fa-eye"></i></a><a href="#"><i class="fa fa-star-o"></i></a><a href="#"><i class="fa fa-external-link"></i></a><a href="#"><i class="fa fa-shopping-cart"></i></a>
+            </div>
+          </div>
+          <div class="col3"><a href="#"><img src="img/shoes_6.jpg" alt="Товар 6"/>
+              <div class="price"> 
+                <p>$149.99</p>
+              </div></a>
+            <div class="store_row">
+              <h4 class="good_name">Even&Odd</h4><a href="#"><i class="fa fa-eye"></i></a><a href="#"><i class="fa fa-star-o"></i></a><a href="#"><i class="fa fa-external-link"></i></a><a href="#"><i class="fa fa-shopping-cart"></i></a>
+            </div>
+          </div>
+        </div>
+        <hr id="hr"/>
+        <div class="row">
+          <div class="col2">
+            <h4>Отзывы</h4>
+            <p>Vel, vulputate vel nibh. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec erat sem, vehicula id dictum sit</p>
+            <cite>Маша Иванова</cite>
+          </div>
+          <div class="col2">
+            <h4>Новости</h4>
+            <div class="row"><a href="#">
+                <div class="date">Апр<br/>01</div>
+                <div class="news_text">
+                  <h5>Nice & clean. The best for you blog!</h5>
+                  <p>Vivamus metus turpis, bibendum vitae euismod vel, vulputate vel nibh</p>
+                </div></a></div>
+            <div class="row"><a href="#">
+                <div class="date">Апр<br/>01</div>
+                <div class="news_text">
+                  <h5>What anEccomerce theme!</h5>
+                  <p>Vivamus metus turpis, bibendum vitae euismod vel, vulputate vel nibh</p>
+                </div></a></div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">
       <div class="upper_footer">
         <div class="container">
