--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="main_right">
           <div class="price"> 
-            <p>$145,99</p>
+            <p>от $145,99</p>
           </div>
           <h1>Розовые туфли Коллекция 2017</h1>
           <h2>Nunc non fermentum nunc. Sed ut ante eget leo tempor consequat sit amet eu orci. Donec dignissim dolor eget..</h2>
@@ -72,7 +72,11 @@
     </section>
     <section class="store">
       <div class="container">
-        <h3>Наши новинки</h3>
+        <div class="left">
+          <h3>Наши новинки</h3>
+        </div>
+        <div class="right"><a class="categories" href="#">Все категории</a></div>
+        <div class="clf"></div>
         <div class="row">
           <div class="col3"><a href="#"><img src="img/shoes_1.jpg" alt="Товар 1"/>
               <div class="price"> 
@@ -99,6 +103,11 @@
             </div>
           </div>
         </div>
+        <div class="left">
+          <h3>Хиты продаж</h3>
+        </div>
+        <div class="right"><a class="categories" href="#">Все категории</a></div>
+        <div class="clf"></div>
         <div class="row">
           <div class="col3"><a href="#"><img src="img/shoes_4.jpg" alt="Товар 4"/>
               <div class="price"> 
@@ -126,7 +135,7 @@
           </div>
         </div>
         <hr id="hr"/>
-        <div class="row">
+        <div class="row_lower">
           <div class="col2">
             <h4>Отзывы</h4>
             <p>Vel, vulputate vel nibh. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec erat sem, vehicula id dictum sit</p>
@@ -134,13 +143,13 @@
           </div>
           <div class="col2">
             <h4>Новости</h4>
-            <div class="row"><a href="#">
+            <div class="row_lower"><a href="#">
                 <div class="date">Апр<br/>01</div>
                 <div class="news_text">
                   <h5>Nice & clean. The best for you blog!</h5>
                   <p>Vivamus metus turpis, bibendum vitae euismod vel, vulputate vel nibh</p>
                 </div></a></div>
-            <div class="row"><a href="#">
+            <div class="row_lower"><a href="#">
                 <div class="date">Апр<br/>01</div>
                 <div class="news_text">
                   <h5>What anEccomerce theme!</h5>
@@ -181,6 +190,7 @@
         </div>
       </div>
     </footer>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet"/>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
     <script src="js/scripts.js"></script>
